--- a/scripts/Readme.html
+++ b/scripts/Readme.html
@@ -171,18 +171,19 @@ pre code {
 </div>
 
 
-<div id="lab-book-for-gene-expression-project" class="section level2">
-<h2>Lab book for gene expression project</h2>
-<p>Keeping track of progress on gene expression paper.</p>
-<p>Current steps: 1. go through clusterprofiler again.</p>
-<pre class="r"><code>summary(cars)</code></pre>
-<pre><code>##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00</code></pre>
+<div id="analysis-overview-for-mcnew-et-al.-2021" class="section level2">
+<h2>Analysis overview for McNew et al. 2021</h2>
+<div id="transcriptomic-responses-of-galápagos-finches-to-avian-pox-virus-infection" class="section level3">
+<h3>Transcriptomic responses of Galápagos finches to avian pox virus infection</h3>
+</div>
+<div id="scripts" class="section level3">
+<h3>Scripts:</h3>
+<ol style="list-style-type: decimal">
+<li></li>
+<li><strong>bracken.R</strong> Script to analyze results of kraken/bracken metatranscriptomics. Used to test whether pox reads were found within transcriptomic dataset and whether there were differences in number of pox reads between species/groups.</li>
+<li><strong>slide_data.R</strong> Script to analyze leukocyte counts from slide microscopy</li>
+</ol>
+</div>
 </div>
 
 
